--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
     "db-path": "~/hourglass/",
-    // white, magenta, black, red, cyan, green, yellow, default
+    "_comment": "Colors can be white, magenta, black, red, cyan, green, yellow, default",
     "color": {
         "board": "white",
         "numbers": "white",
