--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "symfony/config": "^4.2",
         "symfony/yaml": "^4.1",
         "symfony/dependency-injection": "^4.2",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "symfony/process": "^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0"
